sql/item_func.h
@@ -1239,6 +1239,24 @@ public:
 };
 
 
+class Item_long_ge0_func: public Item_int_func
+{
+public:
+  Item_long_ge0_func(THD *thd): Item_int_func(thd) { }
+  Item_long_ge0_func(THD *thd, Item *a): Item_int_func(thd, a) {}
+  Item_long_ge0_func(THD *thd, Item *a, Item *b): Item_int_func(thd, a, b) {}
+  Item_long_ge0_func(THD *thd, Item *a, Item *b, Item *c): Item_int_func(thd, a, b, c) {}
+  Item_long_ge0_func(THD *thd, List<Item> &list): Item_int_func(thd, list) { }
+  Item_long_ge0_func(THD *thd, Item_long_ge0_func *item) :Item_int_func(thd, item) {}
+  const Type_handler *type_handler() const
+  {
+    DBUG_ASSERT(!unsigned_flag);
+    return &type_handler_slong_ge0;
+  }
+  bool fix_length_and_dec() { max_length= 10; return FALSE; }
+};
+
+
 class Item_func_hash: public Item_int_func
 {
 public:
@@ -1361,6 +1379,13 @@ public:
   void fix_length_and_dec_double()
   {
     fix_char_length(MAX_BIGINT_WIDTH);
+  }
+  void fix_length_and_dec_sint_ge0()
+  {
+    uint32 digits= args[0]->decimal_precision();
+    DBUG_ASSERT(digits > 0);
+    DBUG_ASSERT(digits <= MY_INT64_NUM_DECIMAL_DIGITS);
+    fix_char_length(digits + (unsigned_flag ? 0 : 1/*sign*/));
   }
   void fix_length_and_dec_generic()
   {
@@ -1723,6 +1748,7 @@ public:
   my_decimal *decimal_op(my_decimal *);
   const char *func_name() const { return "abs"; }
   void fix_length_and_dec_int();
+  void fix_length_and_dec_sint_ge0();
   void fix_length_and_dec_double();
   void fix_length_and_dec_decimal();
   bool fix_length_and_dec();
@@ -1981,6 +2007,7 @@ public:
   void fix_arg_int(const Type_handler *preferred,
                    const Type_std_attributes *preferred_attributes,
                    bool use_decimal_on_length_increase);
+  void fix_arg_slong_ge0();
   void fix_arg_hex_hybrid();
   void fix_arg_double();
   void fix_arg_time();
